--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,38 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+# Définition du nom du workflow, qui sera affiché sur GitHub
+name: Java CI/CD with Maven
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
-
+# Définition des événements qui déclencheront l'exécution du workflow
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  push: # Lors d'un push
+    branches: [ "main" ] # Sur la branche main
+  pull_request: # Lors d'une pull request
+    branches: [ "main" ] # Ciblant la branche main
 
+# Définition des jobs à exécuter
 jobs:
-  build:
+  build-and-test: # Nom du job
+    runs-on: ubuntu-latest # Exécute le job sur la dernière version d'Ubuntu disponible
 
-    runs-on: ubuntu-latest
+    steps: # Étapes du job
+    - uses: actions/checkout@v4 # Étape pour cloner le code source du dépôt
 
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Set up JDK 21 # Étape pour configurer JDK 21
+      uses: actions/setup-java@v3 # Utilise l'action setup-java pour configurer Java
+      with: # Options pour l'action setup-java
+        java-version: '21' # Spécifie la version de Java à utiliser
+        distribution: 'temurin' # Spécifie la distribution de Java à utiliser
+        cache: maven # Active le cache pour Maven
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    # - name: Update dependency graph
-    #   uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Build with Maven # Étape pour construire le projet avec Maven
+      run: mvn -B package --file pom.xml # Exécute Maven pour compiler le projet et empaqueter
+
+    - name: Run Checkstyle # Étape pour exécuter Checkstyle
+      run: mvn checkstyle:checkstyle # Exécute Checkstyle pour vérifier la conformité du style de code
+
+    - name: Run Tests # Étape pour exécuter les tests
+      run: mvn test # Exécute les tests unitaires
+
+    - name: Build Docker Image # Étape pour construire l'image Docker
+      run: docker build -t spring-boot-student-management . # Construit l'image Docker à partir du Dockerfile
+
+    # Ajoutez ici les étapes supplémentaires pour l'analyse de code et le déploiement
